test/Errors/parse_error.elab
Theorem bad_parse : Prop := =>